# exercises

./: .gitignore  README.md
2022_books/2022-11-29_Zero-To-Production-In-Rust_2021/ch04/: Cargo.toml
2022_books/2022-11-29_Zero-To-Production-In-Rust_2021/ch04/configs/: local.yaml
2022_books/2022-11-29_Zero-To-Production-In-Rust_2021/ch04/src/: common.rs  configuration.rs  lib.rs  main.rs  misc.rs
2022_books/2022-11-29_Zero-To-Production-In-Rust_2021/ch04/src/routes/: common.rs  greet.rs  health_check.rs  middlewares.rs  misc.rs  mod.rs  subscriptions.rs
2022_books/2022-11-29_Zero-To-Production-In-Rust_2021/ch04/tests/: health_check.rs  tests.sh
2022_books/2022-11-29_Zero-To-Production-In-Rust_2021/zero2prod/: .dockerignore  .env  Cargo.toml  init.sh  sqlx-data.json
2022_books/2022-11-29_Zero-To-Production-In-Rust_2021/zero2prod/configs/: local.yaml
2022_books/2022-11-29_Zero-To-Production-In-Rust_2021/zero2prod/deployments/: build-alpine.df  build.df  build.sh
2022_books/2022-11-29_Zero-To-Production-In-Rust_2021/zero2prod/migrations/: 20221206030423_create_subscriptions_table.sql  20221206032803_create_subscription_tokens_table.sql
2022_books/2022-11-29_Zero-To-Production-In-Rust_2021/zero2prod/scripts/: db_alter.sql  sqlx-migration.sh  tests.sh
2022_books/2022-11-29_Zero-To-Production-In-Rust_2021/zero2prod/src/: configuration.rs  lib.rs  logging.rs  main.rs  startup.rs  telemetry.rs
2022_books/2022-11-29_Zero-To-Production-In-Rust_2021/zero2prod/src/routes/: apis.rs  common.rs  demo.rs  handlers.rs  load.rs  middlewares.rs  misc.rs  mod.rs  subscriptions.rs
2022_books/2022-11-29_Zero-To-Production-In-Rust_2021/zero2prod/tests/: health_check.rs  helpers.rs  subscriptions.rs
2022_courses/2022-11-09_Ultimate_Rust_2_Intermediate_Concepts_2022/cafeteria/: Cargo.toml
2022_courses/2022-11-09_Ultimate_Rust_2_Intermediate_Concepts_2022/cafeteria/src/: main.rs
2022_frameworks/rust-web/: Cargo.toml
2022_frameworks/rust-web/scripts/: api-test.sh
2022_frameworks/rust-web/src/: demo.rs  lib.rs  main.rs
2022_frameworks/rust-web/src/api/: mod.rs
2022_frameworks/rust-web/src/api/auth/: mod.rs  path.rs  user.rs
2023_algorithms/rust/basics/: Cargo.toml
2023_algorithms/rust/basics/src/: lib.rs  linked_list_box.rs  stack.rs  tree.rs  tree_traversal.rs  utils.rs
2023_algorithms/rust/basics/src/demo/: enum.rs
2023_algorithms/rust/basics/src/math/: factorial.rs  mod.rs  modulus.rs
2023_algorithms/rust/basics/src/searching/: binary_search.rs  linear_search.rs  mod.rs
2023_algorithms/rust/basics/src/sorting/: _divide_and_conquer.rs  brute_force.rs  data.rs  heap1.rs  heap2.rs  heap_array.rs  heap_priority_queue.rs  heap_revese.rs  heap_sort.rs  merge_sort.rs  mod.rs  quick_select.rs  quick_sort.rs
2023_algorithms/rust/basics/src/structs/: doubly_linked_list.rs  graph.rs  heap_priority_queue.rs  linked_list_box.rs  linked_list_general.rs  linked_list_unique.rs  mod.rs  queue.rs  queue1.rs  queue2.rs  queue3.rs  queue_linked_list.rs  queue_vector.rs  queue_vector2.rs
2023_algorithms/rust/basics/src/tree/: binary_tree.rs  binary_tree_test.rs  mod.rs  node.rs  test_01.rs  traversal.rs  tree.rs
2023_books/2023_Rust_Books/2023-01-27_Rust_Web_Programming/ch16/echo_server/: Cargo.toml
2023_books/2023_Rust_Books/2023-01-27_Rust_Web_Programming/web_app/: Cargo.toml
2023_books/2023_Rust_Books/2023-01-27_Rust_Web_Programming/web_app/src/: main.rs  processes.rs  state.rs
2023_books/2023_Rust_Books/2023-10-23_Practical-Rust-1.x-Cookbook-100+-Solutions-2023/p02_my-async/: Cargo.toml
2023_books/2023_Rust_Books/2023-10-23_Practical-Rust-1.x-Cookbook-100+-Solutions-2023/p02_my-async/src/: b02.rs
2023_frameworks/rust_async/: Cargo.toml
2023_frameworks/rust_async/src/: lib.rs
2023_frameworks/rust_tokio/: Cargo.toml
2023_frameworks/rust_tokio/demo-01/: Cargo.toml
2023_frameworks/rust_tokio/demo-02/: Cargo.toml
2023_frameworks/rust_tokio/demo-03/: Cargo.toml
2024_books/2023-12-29_async-rust/p01/: Cargo.toml  init.sh
2024_books/Async-Rust/p02/: Cargo.toml
2024_books/Async-Rust/p02/src/: main.rs
2024_books/DSAR/ch05/a02/: Cargo.toml
2024_books/Mastering_Rust_Programming_From_Foundation_to_Future/c0502_async/: Cargo.toml  example.txt
2024_books/Mastering_Rust_Programming_From_Foundation_to_Future/c0601_debugging/: Cargo.toml  install.sh  tests.sh
2024_books/Mastering_Rust_Programming_From_Foundation_to_Future/c0601_debugging/benches/: sorting_benchmark.rs
2024_books/Mastering_Rust_Programming_From_Foundation_to_Future/c0601_debugging/src/: lib.rs  main.rs  sorting.rs
2024_books/Mastering_Rust_Programming_From_Foundation_to_Future/c0601_debugging/tests/: integration_test.rs  my_module_test.rs
2024_books/Mastering_Rust_Programming_From_Foundation_to_Future/c0601_test_debug_bench/: Cargo.toml  install.sh
2024_books/Mastering_Rust_Programming_From_Foundation_to_Future/c0601_test_debug_bench/benches/: sorting_benchmark.rs
2024_books/Mastering_Rust_Programming_From_Foundation_to_Future/c0601_test_debug_bench/src/: lib.rs  my_module.rs
2024_books/Mastering_Rust_Programming_From_Foundation_to_Future/c0601_test_debug_bench/tests/: integration_test.rs  my_module_test.rs  tags_test.rs
2024_books/Mastering_Rust_Programming_From_Foundation_to_Future/c0901_web/hello-actix/: Cargo.toml
2024_books/Mastering_Rust_Programming_From_Foundation_to_Future/c0901_web/hello-actix/src/: main.rs
2024_courses/Lets_Get_Rusty/a02_project/draw/: Cargo.toml
2024_courses/Lets_Get_Rusty/a04_async/: Cargo.toml
2024_courses/Lets_Get_Rusty/a05_async/: Cargo.toml
2024_courses/Lets_Get_Rusty/a05_microservices/: Cargo.toml  build.rs  rust_protobuf.sh
2024_courses/Lets_Get_Rusty/a06_errors/: Cargo.toml
2024_courses/Lets_Get_Rusty/a06_errors/src/: main.rs
2024_courses/Lets_Get_Rusty/a07_async/async_01/: Cargo.toml
2024_courses/Lets_Get_Rusty/a08_microservices/: Cargo.toml  build.rs  init.sh
2024_courses/Lets_Get_Rusty/a08_microservices/proto/: authentication.proto  hello.proto
2024_courses/Lets_Get_Rusty/a08_microservices/src/: hello.rs
(+1663 files in other folders)
