[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
chrono = "0.4"
env_logger = "0.9"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
