[package]
name = "rust_async"
version = "0.1.0"
edition = "2021"
default-run = "rust_async"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "async01"
path = "bin/async01.rs"

[[bin]]
name = "async02"
path = "bin/async02.rs"

[[bin]]
name = "async03"
path = "bin/async03.rs"

[[bin]]
name = "async04"
path = "bin/async04.rs"

[[bin]]
name = "chan01"
path = "bin/chan01_mpsc.rs"

[[bin]]
name = "chan02"
path = "bin/chan02_select.rs"

[[bin]]
name = "future01"
path = "bin/future01_pin.rs"

[[bin]]
name = "future02"
path = "bin/future02_select.rs"

[dependencies]
async-std = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
log-mdc = "0.1"
