[package]
name = "ch04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
chrono = "0.4.23"
config = "0.13.2"
num_cpus = "1.14.0"
serde = { version = "1.0.148", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
structopt = "0.3.26"
tokio = "1.22.0"
uuid = { version = "1.2.2", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = "0.11.13"
