[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-rt = "2"
actix-web = "4"
anyhow = "1"
chrono = "0.4"
config = "0.13"
env_logger = "0.10"
futures-util = "0.3"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = "0.11"
