[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-rt = "2"
actix-web = "4"
anyhow = "1"
chrono = "0.4"
config = "0.13"
# env_logger = "0.10"
futures-util = "0.3"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
unicode-segmentation = "1"
validator = "0.16"
# Using table-like toml syntax to avoid a super-long line!

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]


# Using table-like toml syntax to avoid a super-long line!
[dev-dependencies]
fake = "2"
once_cell = "1"
reqwest = "0.11"
