[package]
name = "cafeteria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
chrono = "0.4.22"
crossbeam = "0.8.2"
futures = "0.3.25"

[[bin]]
path = "src/main.rs"
name = "cafeteria"

[[bin]]
path = "bin/futures.rs"
name = "futures"

[[bin]]
path = "bin/async_std.rs"
name = "async_std"
