[package]
name = "basics"
version = "0.1.0"
edition = "2021"
default-run = "basics"

[[bin]]
name = "build_string_tree"
path = "bin/build_string_tree.rs"


[lib]
name = "basics"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
