[package]
name = "p01"
version = "0.1.0"
edition = "2021"

default-run = "p01"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.35", features = ["full"] }

[[bin]]
name = "a01"
path = "./bin/a01_reqwest.rs"

[[bin]]
name = "a02"
path = "./bin/a02_reqwest-seq.rs"

[[bin]]
name = "a03"
path = "./bin/a03_reqwest-async.rs"

[[bin]]
name = "b01"
path = "./bin/b01_sleep-seq.rs"

[[bin]]
name = "b02"
path = "./bin/b02_parallel.rs"

[[bin]]
name = "b03"
path = "./bin/b03_async-fetch.rs"

[[bin]]
name = "b04"
path = "./bin/b04_async-fetch.rs"

[[bin]]
name = "c02"
path = "./bin/c02_coffee-and-toast.rs"

[[bin]]
name = "c03"
path = "./bin/c03_coffee-and-toast.rs"

[[bin]]
name = "c04"
path = "./bin/c04_coffee-and-toast.rs"

[[bin]]
name = "c05"
path = "./bin/c05_coffee-and-toast.rs"

[[bin]]
name = "d01"
path = "./bin/d01_async.rs"

[[bin]]
name = "d02"
path = "./bin/d02_error.rs"

[[bin]]
name = "d03"
path = "./bin/d03_timeout.rs"

[[bin]]
name = "e01"
path = "./bin/e01_share-data.rs"

[[bin]]
name = "e02"
path = "./bin/e02_share-data.rs"

[[bin]]
name = "e03"
path = "./bin/e03_share-data.rs"
