[package]
name = "p02"
version = "0.1.0"
edition = "2021"
default-run = "p02"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "log1"
path = "bin/log1.rs"

[[bin]]
name = "log2"
path = "bin/log2.rs"

[dependencies]
chrono = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
