[package]
name = "c0502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "async"
path = "bin/async.rs"

[[bin]]
name = "tokio"
path = "bin/tokio.rs"

[[bin]]
name = "channel"
path = "bin/channel.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
