[package]
name = "c0601_debugging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.32", features = ["serde"] }
env_logger = "0.11.0"
log = { version = "0.4.20", features = ["std", "serde"] }
