[package]
name = "c0601"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bencher = "0.1.5"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.0"
log = { version = "0.4.20", features = ["std", "serde"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sorting_benchmark"
harness = false
