[package]
name = "a05"
version = "0.1.0"
edition = "2021"
# default-run = "auth"
default-run = "server"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "client"
path = "bin/client.rs"

[[bin]]
name = "server_00"
path = "bin/server_00.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tonic = "0.11"

[build-dependencies]
tonic-build = "0.11"
