[package]
name = "a06"
version = "0.1.0"
edition = "2021"
default-run = "a06"

[[bin]]
name = "unrecoverable"
path = "bin/unrecoverable.rs"

[[bin]]
name = "recoverable"
path = "bin/recoverable.rs"

[[bin]]
name = "propagating"
path = "bin/propagating.rs"

[dependencies]
env_logger = "0.11.2"
log = "0.4.20"
