[package]
name = "a06"
version = "0.1.0"
edition = "2021"
default-run = "a06"

[[bin]]
name = "unrecoverable"
path = "bin/unrecoverable.rs"

[[bin]]
name = "recoverable"
path = "bin/recoverable.rs"

[[bin]]
name = "propagating"
path = "bin/propagating.rs"

[[bin]]
name = "errorx"
path = "bin/errorx.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
thiserror = "1"
