[package]
name = "auth"
version = "0.1.0"
edition = "2021"
# default-run = "auth"
default-run = "server"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "client"
path = "bin/client.rs"

[dependencies]
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
