[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "x01"
#path = "bin/x01.rs"

[dependencies]
actix-web = "4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
actix-service = "2"
futures = "0.3"
derive_more = "0.99"
once_cell = "1"
futures-util = "0.3"
chrono = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
