[package]
name = "my-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "b01"
path = "src/b01.rs"

[[bin]]
name = "b02"
path = "src/b02.rs"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
