[package]
name = "a02"
version = "0.1.0"
edition = "2021"

default-run = "merge_sort"

[[bin]]
name = "merge_sort"
path = "bin/merge_sort.rs"

[[bin]]
name = "merge_sort_inplace"
path = "bin/merge_sort_inplace.rs"

[[bin]]
name = "quick_sort"
path = "bin/quick_sort.rs"

[dependencies]
rayon = "1.10.0"
