[package]
name = "hello-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.1"
askama = { version = "0.12.1", features = ["with-actix-web", "serde", "serde-json", "serde-yaml", "markdown"] }
askama_actix = { version = "0.14.0", features = ["serde-json", "serde-yaml", "urlencode", "markdown"] }
serde = { version = "1.0.195", features = ["serde_derive"] }
tokio = { version = "1.35.1", features = ["full"] }
