[package]
name = "draw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgb = { version = "0.8.37", features = ["serde"], optional = true }
serde = { version = "1.0.196", features = ["derive"], optional = true }

[features]
# serde = ["dep:serde"]
# rgb = ["dep:rgb"]

# default = ["color"]

color = ["dep:rgb"]
shapes = ["color", "dep:serde", "rgb?/serde"]
# rbg?/serde only enable serde inside rbg(if enabled)