[package]
name = "echo_server"
version = "0.1.0"
edition = "2021"

default-run = "echo_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = {version = "0.7", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bincode = "1"
bytes = "1"
